# piano-recorder

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.sh  next_tasks.md
app/: piano-file-recorder.cpp
cmake/: warnings.cmake
include/: audio-recorder.h  audio_recorder.h  device-utils.h  device_utils.h  instrument-recorder.h  instrument_recorder.h  juce-audio-context.h  midi-recorder.h  midi_recorder.h  simple-recorder.h  simple_recorder.h  spsc_ring_buffer.h
scripts/: create_ctags.sh  format.sh  virtual-audio.sh
src/: alsa_midi_in.cpp  alsa_midi_in.hpp  alsa_sequencer.cpp  alsa_sequencer.hpp  audio-recorder.cpp  audio_recorder.cpp  device-utils.cpp  instrument-recorder.cpp  instrument_recorder.cpp  juce-audio-context.cpp  main.cpp  midi-recorder.cpp  midi_device.cpp  midi_device.hpp  midi_recorder.cpp  midi_recorder.hpp
